# mcp-factory

./: .codecov.yml  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: WORKFLOW.md
.github/workflows/: python-ci.yml  python-publish.yml
demo/: README.md  client.py  config.yaml  server.py
docs/: README.md  authorization.md  cli-guide.md  cli_guide.md  configuration.md  examples.md  getting-started.md  middleware.md  publishing-guide.md  troubleshooting.md
docs/architecture/: README.md  configuration_architecture.md  overall_architecture.md
examples/: README.md  advanced_config.yaml  advanced_example.py  authorization_demo.py  basic_example.py  basic_server.py  config.example.yaml  custom_middleware.py  external_servers_demo.py  factory_complete.py  middleware_demo.py  mounting_servers.py  multi_adapter_demo.py  multi_source_adapter_demo.py  production_ready.py  reload_config_example.py  shared.py  simple_example.py
examples/configs/: basic.yaml  external_servers.yaml  factory.yaml  mounting.yaml  multi_adapter.yaml  multi_source_config.yaml  production.yaml
examples/demo/: README.md  client.py  config.yaml  server.py
fastmcp_factory/: __init__.py  factory.py  server.py
fastmcp_factory/auth/: __init__.py  auth0.py  registry.py
mcp_factory/: __init__.py  auth.py  cli.py  config_validator.py  exceptions.py  factory.py  server.py  server.py.backup
mcp_factory/adapters/: __init__.py  async_utils.py  base.py  cache.py  enhanced_http_adapter.py  multi_adapter.py  python_adapter.py  universal_adapter.py
mcp_factory/auth/: __init__.py  registry.py
mcp_factory/authorization/: __init__.py  audit.py  config.py  debug_service.py  manager.py  models.py  permission_engine.py  role_service.py  saas_service.py
mcp_factory/cli/: __init__.py  helpers.py  main.py  utils.py
mcp_factory/config/: manager.py  schema.py
mcp_factory/mounting/: models.py  mounter.py  registry.py
mcp_factory/project/: __init__.py  builder.py  components.py  publisher.py  template.py  validator.py
mcp_factory/server/: managed_server.py  tool_configs.py
scripts/: README.md  __init__.py  audit.py  audit.sh  audit_config.yaml  demo_real_integration.py  dependency_checker.py  performance_demo.py
scripts/audit/: __init__.py  audit.py  audit.sh  audit_config.yaml  dependency_checker.py
tests/: README.md  __init__.py  conftest.py  coverage_report.md  run_all_tests.py  run_tests.py  test_auth0.py  test_auto_register.py  test_example_server.py  test_factory.py  test_managed_server.py  test_server_edge_cases.py
tests/e2e/: __init__.py
tests/examples/: __init__.py  test_basic_server.py
tests/fixtures/: test_servers_config.yaml
tests/integration/: __init__.py  test_server_factory.py  (+1 more)
(+13 files in other folders)
